Fix buttons. Fix spacing betweeen main and classes
It turns out that if the z-index on classes is -1 you can't click them, but when it's >0 then it covers the navbar. So I changed the z-index on the navbar. That revealed a problem with spacing which I promptly proceeded to mend. Success has been achieved.

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -11,6 +11,7 @@
   color: $font-secondary;
   font-size: 1.5rem;
   line-height: 38px;
+  z-index: 10000;
 }
 .navbar__nav {
   height: 100%;
