--- a/styles/landingPage.module.scss
+++ b/styles/landingPage.module.scss
@@ -102,11 +102,11 @@
   width: 100%;
   margin: 0 auto;
   position: relative;
-  z-index: -1;
-  margin: 40px 0 20px 0;
+  margin: 60px 0 20px 0;
 }
 
 .classes {
+  margin-top: 20px;
   width: 100%;
   display: grid;
   grid-template-columns: 1.5fr 3fr;
